--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>org.example.HomeworkCicdApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
