--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,6 @@
-version: '3.8'
+networks:
+  cicd_network:
+    external: true
 
 services:
   jenkins:
@@ -12,25 +14,23 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - cicd_network
+    privileged: true
+    environment:
+      DOCKER_HOST: "tcp://host.docker.internal:2375"
+    depends_on:
+      - nexus
 
   nexus:
     image: sonatype/nexus3
+    restart: always
     container_name: nexus
     ports:
       - "8081:8081"
     volumes:
-      - nexus_data:/nexus-data
+      - nexus-data:/nexus-data
     networks:
       - cicd_network
 
 volumes:
   jenkins_home:
-    external: true
-    name: jenkins_home
-  nexus_data:
-    external: true
-    name: nexus_data
-
-networks:
-  cicd_network:
-    driver: bridge
+  nexus-data:
